[package]
name = "bananabot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "cache",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
